# Bauxite

./: .travis.yml  Cargo.toml  LICENSE  README  README.md
doc/: README.html  aliases.js  search-index.js  settings.html  source-files.js
doc/bauxite/: all.html  enum.Alignment.html  index.html  sidebar-items.js  struct.Box.html  struct.BoxBuilder.html
doc/implementors/core/fmt/: trait.Display.js
doc/implementors/core/marker/: trait.Send.js  trait.Sync.js
doc/lib/: all.html  enum.Alignment.html  index.html  struct.Bauxite.html  struct.Box.html
doc/src/bauxite/: lib.rs.html  lines.rs.html
doc/src/lib/: lib.rs.html
src/: color.rs  formatting.rs  helper.rs  lib.rs  lines.rs  message.rs
src/color/: ansi_color_codes.rs  mod.rs  rgb_color.rs
src/lines/: color.rs  line_type.rs  mod.rs
