[package]
name = "bauxite"
version = "0.1.0"
authors = ["dockoneal <mail@dockoneal.com>"]
description = "Wrap a string in a box for more aesthetic output to a console"
repository = "https://github.com/Doxterpepper/Bauxite"
keywords = ["terminal", "box", "output", "string", "wrap"]
categories = ["command-line-interface", "value-formatting", "visualization"]
license = "MIT"
edition = "2018"
exclude = ["Screenshot.png"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
